refactor: simplify socket interception to factory-only approach
Remove the call-site rewriting layer (Network.newSocket/newServerSocket) for
Socket and ServerSocket construction. The JVM-global SocketImplFactory, combined
with the InetAddressResolverProvider SPI for DNS, is sufficient to intercept all
socket construction — including JDK-internal paths like the SSLSocket super()
constructor chain.

When running outside a simulation node (e.g. JVM bootstrap), the factory falls
back to the platform SocketImpl via a reflective MethodHandle to the package-
private SocketImpl.createPlatformSocketImpl(), avoiding the NPE that would occur
from returning null.

Also removes dead code: NodeSocketImplFactory class, commented-out SocketFactory/
ServerSocketFactory advice blocks, and unused imports.